--- a/css/todo.css
+++ b/css/todo.css
@@ -19,6 +19,7 @@ body{
   -webkit-backdrop-filter: blur(10px);
   padding: 20px;
   border-radius: 20px;
+  
 }
 .toDoParagraph{
   display:flex;
@@ -139,10 +140,13 @@ background-image: linear-gradient(#f2f0ef, #0073cf );
   background: transparent; 
   border:1px solid blue;
   border-radius: 10px;
-  color:gray;
+  color:white;
+  text-align: center;
+  font-size: 20px;
 }
 .add_item input::placeholder{
   padding-left: 10px;
+  color:white;
 }
 /* edit button css */
 .editBtn {
@@ -354,13 +358,20 @@ padding:5px;
 align-items: center;
 border-radius:15px;
 }
-.singleToDoDiv input{
+.singleToDoDivinput{
   width:400px;
   height:50px;
   background: transparent;
   outline:none;
   border:none;
+  color:white;
+  text-align: center;
+  font-size: 18px;
 }
+.icon_colo{
+  color:white;
+}
+
 
 
 
